--- a/alert.html
+++ b/alert.html
@@ -1,13 +1,11 @@
-<!-- 
 
 
 
                     <div class="alert alert-info alert-dismissible text-white" role="alert">
-                        뉴스! <a href="http://google.com" target="_blank" class="alert-link text-white">정환집사님만을 위한</a> 재고관리 앱 블록서입니다! :)
+                        뉴스! <a href="http://google.com" target="_blank" class="alert-link text-white">정환집사님을 위한</a> 스페셜 에디션입니다.
                         <button type="button" class="btn-close text-lg py-3 opacity-10" data-bs-dismiss="alert" aria-label="Close">
 <span aria-hidden="true">&times;</span>
 </button>
                     </div>
 
 
--->
